# Flappy-bird-neat

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  agents.md  environment.yml  plan.md  progress.md  pyproject.toml  specification_technique_neat_reutilisable_pour_projets_pygame_cas_initial_flappy_bird.md
games/flappy/: config.py
games/flappy/configs/: env.yml  neat.yml  run.yml
games/flappy/env/: __init__.py  adapter.py  env_core.py  env_pygame.py
neatlab/: __init__.py  benchmark.py  cli.py  config.py  evaluator.py  genes.py  genome.py  innovations.py  metrics.py  network.py  persistence.py  population.py  reporters.py  reproduction.py  species.py  training.py
tests/flappy/: test_env.py  test_env_pygame.py
tests/neatlab/: test_benchmark.py  test_cli.py  test_config.py  test_evaluator.py  test_genes.py  test_genome.py  test_innovations.py  test_network.py  test_population.py  test_reproduction.py  test_species.py  test_training.py
